--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -5,7 +5,7 @@
 }
 .header{
     background-color: $cor-primaria;
-    color: white;
+    color: rgb(187, 4, 4);
     padding: 1rem 0;
 }
 
@@ -28,7 +28,7 @@
         flex-wrap: wrap;
 
         a {
-            color: white;
+            color: green;
             text-decoration: none;
             font-weight: bold;
             
