--- a/scss/_variaveis.scss
+++ b/scss/_variaveis.scss
@@ -12,4 +12,4 @@ $cor-fundo: #ecf0f1;
 $cor-texto: #333;
 
 $espacamento: 1.5rem;
-$font-padrao: Arial, Helvetica, sans-serif;
+$font-primaria: Arial, Helvetica, sans-serif;
