--- a/scss/_componentes.scss
+++ b/scss/_componentes.scss
@@ -1,5 +1,7 @@
+@use 'mixins';
+@use 'variaveis';
 .home {
-  background: $cor-secundaria;
+  background: variaveis.$cor-secundaria;
   color: white;
   text-align: center;
   padding: 10vh 2vw;
@@ -10,7 +12,7 @@
   background-color: white;
   border-radius: 8px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  @include espacamento-padrao;
+  @include mixins.espacamento-padrao;
   margin: 2rem 0;
 }
 
@@ -20,7 +22,7 @@
   gap: 1.5rem;
 
   .servico {
-    background: $cor-secundaria;
+    background: variaveis.$cor-secundaria;
     color: white;
     padding: 2rem;
     border-radius: 10px;
@@ -44,7 +46,7 @@ form {
   }
 
   button {
-    @include botao-estilizado;
+    @include mixins.botao-estilizado;
   }
 }
 
